adding static resources. Closes #13

--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -5,7 +5,17 @@
     <title>Pet Clinic </title>
 </head>
 <body>
-    <h1 th:text="Tst">Index Page</h1>
-
+    <h1 th:text="'Index Page'">Index Page</h1>
+    <table>
+        <thead>
+        <tr>Number 1</tr>
+        <tr>Number 2</tr>
+        </thead>
+        <tbody>
+        <tr th:each="test : ${tests}">
+            <td th:text="${test}"></td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
