--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
 <head>
     <meta charset="UTF-8">
     <title>Pet Clinic </title>
 </head>
 <body>
-    <h1 th:text="'Index Page'">Index Page</h1>
-    <table>
-        <thead>
-        <tr>Number 1</tr>
-        <tr>Number 2</tr>
-        </thead>
-        <tbody>
-        <tr th:each="test : ${tests}">
-            <td th:text="${test}"></td>
-        </tr>
-        </tbody>
-    </table>
+    <h2 th:text="#{welcome}">Welcome</h2>
+
+    <div class="row">
+        <div class="col-md-12">
+            <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
+        </div>
+    </div>
+
 </body>
 </html>
