--- a/pet-clinic-web/src/main/resources/templates/fragments/layout.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/layout.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html th:fragment="layout (template, menu)" xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html xmlns:th="http://www.thymeleaf.org" th:fragment="layout (template, menu)">
+
 <head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -53,7 +54,7 @@
                     <span>Find owners</span>
                 </li>
 
-                <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')">
+                <li th:replace="::menuItem ('/vets/vetsList.html','vets','veterinarians','th-list','Veterinarians')">
                     <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
                     <span>Veterinarians</span>
                 </li>
